clusters/homelab/apps/homeassistant/hamh-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hamh
  namespace: homeassistant
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-url: http://authelia.authelia.svc.cluster.local/api/authz/auth-request
    nginx.ingress.kubernetes.io/auth-signin: https://auth.tkuipers.ca/?rd=https://$host$escaped_request_uri
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hamh.tkuipers.ca
      secretName: hamh-tkuipers-ca-tls
  rules:
    - host: hamh.tkuipers.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hamh
                port:
                  number: 8482
